--- a/Code/test.css
+++ b/Code/test.css
@@ -8,11 +8,11 @@ html, body {
     width: 100%;
 }
 
-canvas {
-    display: block;
-}
-
 #myCanvas {
-    /*background: #001022;*/
-    /*background: #FFFFFF;*/
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin:auto;
 }
