--- a/Code/style.css
+++ b/Code/style.css
@@ -23,7 +23,6 @@ html, body {
 
 #undoButton {
     position:absolute;
-    transition: .5s ease;
     top: 1%;
     left: 1%;
     width: 64px;
@@ -32,7 +31,6 @@ html, body {
 
 #redoButton {
     position:absolute;
-    transition: .5s ease;
     top: 1%;
     left: 13%;
     width: 64px;
@@ -41,9 +39,17 @@ html, body {
 
 #refreshButton {
     position:absolute;
-    transition: .5s ease;
     top: 1%;
     left: 25%;
+    width: 56px;
+    height:56px;
+}
+
+#nextLevelButton {
+    visibility: hidden;
+    position:absolute;
+    top: 50%;
+    left: 50%;
     width: 56px;
     height:56px;
 }
