--- a/Code/style.css
+++ b/Code/style.css
@@ -3,6 +3,16 @@
     padding: 0;
 }
 
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 html, body {
     height: 100%;
     width: 100%;
@@ -13,30 +23,34 @@ html, body {
 }
 
 #undoButton {
-    top: 1%;
+    position: relative;
     float:left;
-    margin-right:5px;
-    width: 64px;
-    height:64px;
+    width: 4%;
+    height: 4%;
     outline: none;
 }
 
 #redoButton {
-    float:left;
-    margin-right:5px;
-    top: 1%;
+    position: relative;
     float: left;
-    width: 64px;
-    height:64px;
+    width: 4%;
+    height: 4%;
     outline: none;
 }
 
 #refreshButton {
+    position: relative;
     float:left;
-    margin-right:5px;
-    top: 1%;
-    width: 56px;
-    height:56px;
+    width: 4%;
+    height: 4%;
+    outline: none;
+}
+
+#tutorial   {
+    position: relative;
+    float:left;
+    width: 4%;
+    height: 4%;
     outline: none;
 }
 
@@ -45,8 +59,24 @@ html, body {
     position:absolute;
     top: 50%;
     left: 50%;
-    width: 56px;
-    height:56px;
+    width: 4%;
+    height: auto;
+}
+
+#tutorialForwards {
+    position:absolute;
+    top: 45%;
+    left: 90%;
+    width: 4%;
+    height: auto;
+}
+
+#tutorialBackwards {
+    position:absolute;
+    top: 45%;
+    left: 10%;
+    width: 4%;
+    height: auto;
 }
 
 @font-face {
