--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                     supported by Chrome and Opera */
 }
 
 html, body {
@@ -24,7 +25,7 @@ html, body {
 
 #undoButton {
     position: relative;
-    float:left;
+    float: left;
     width: 4%;
     height: 4%;
     outline: none;
@@ -40,15 +41,15 @@ html, body {
 
 #refreshButton {
     position: relative;
-    float:left;
+    float: left;
     width: 4%;
     height: 4%;
     outline: none;
 }
 
-#tutorial   {
+#tutorial {
     position: relative;
-    float:left;
+    float: left;
     width: 4%;
     height: 4%;
     outline: none;
@@ -56,7 +57,7 @@ html, body {
 
 #nextLevelButton {
     visibility: hidden;
-    position:absolute;
+    position: absolute;
     top: 50%;
     left: 50%;
     width: 4%;
@@ -64,7 +65,7 @@ html, body {
 }
 
 #tutorialForwards {
-    position:absolute;
+    position: absolute;
     top: 46%;
     left: 90%;
     width: 4%;
@@ -72,11 +73,19 @@ html, body {
 }
 
 #tutorialBackwards {
-    position:absolute;
+    position: absolute;
     top: 46%;
     left: 6%;
     width: 4%;
     height: auto;
+}
+
+#skipLevel {
+    position: relative;
+    float: left;
+    width: 4%;
+    height: 4%;
+    outline: none;
 }
 
 @font-face {
