--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ html, body, .container {
     padding: 0;
     width: 100%;
     height: 100%;
-    display: table
+    display: table;
+    touch-action: none;
 }
 .wrapper canvas {
     position: absolute;
